# c2s-proposal-demo

./: README.md  pyproject.toml  requirements.md
components/ai-pipeline/: execution-logs.tsx  index.ts
docs/: Architecture.md  Artchitecture-artifacts.md  Business-artifacts.md  Business.md  Engineering-artifacts.md  Engineering.md  Frontend-plan.md  Infra-artifacts.md  Infra.md  Melhroias-frontend.md  README.md  UI-UX.md  accuracy-analysis.md
frontend/c2s-dashboard/: package.json  pnpm-lock.yaml
frontend/c2s-dashboard/app/: globals.css  layout.tsx  page.tsx
frontend/c2s-dashboard/app/accuracy/: page.tsx
frontend/c2s-dashboard/app/architecture/: page.tsx
frontend/c2s-dashboard/app/business/: page.tsx
frontend/c2s-dashboard/app/dashboard/: page.tsx
frontend/c2s-dashboard/app/engineering/: page.tsx
frontend/c2s-dashboard/app/files/: page.tsx
frontend/c2s-dashboard/app/infrastructure/: page.tsx
frontend/c2s-dashboard/app/process-history/: page.tsx
frontend/c2s-dashboard/app/settings/: page.tsx
frontend/c2s-dashboard/components/: Sidebar.tsx
frontend/c2s-dashboard/contexts/: auth-context.tsx
frontend/c2s-dashboard/types/: likec4.d.ts  radix-ui-react-slider.d.ts  slider.d.ts  textarea.d.ts
graph/: langgraph_builder.py
notifications/: __init__.py  base.py  logger.py
notifications/channels/: __init__.py  console.py
pipeline/: __init__.py
pipeline/functions/: __init__.py
pipeline/models/: __init__.py  flow.py  nodes.py  parameters.py  transformations.py
poc/: console_notification_example.py  definitions.py
(+107 files in other folders)
