[tool.poetry]
name = "c2s-hugo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.3"
langchain-openai = "^0.3.12"
langgraph = "^0.3.27"
structlog = "^25.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
